refactor: changing user to profile
