# docs/swagger.yaml
@@ -5,12 +5,18 @@ definitions:
       message:
         type: string
     type: object
-  settings.Settings:
+  profile.Profile:
     properties:
-      autoBuyCards:
+      lastAccess:
+        type: string
+      name:
+        type: string
+      picture:
+        type: string
+      pictureLocked:
         type: boolean
     type: object
-  user.UpdateProfileRequest:
+  profile.UpdateProfileRequest:
     properties:
       forceUpdate:
         type: boolean
@@ -21,15 +27,9 @@ definitions:
     required:
     - name
     type: object
-  user.User:
+  settings.Settings:
     properties:
-      lastAccess:
-        type: string
-      name:
-        type: string
-      picture:
-        type: string
-      pictureLocked:
+      autoBuyCards:
         type: boolean
     type: object
 info:
@@ -49,7 +49,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/user.User'
+            $ref: '#/definitions/profile.Profile'
         "400":
           description: Bad Request
           schema:
@@ -77,14 +77,14 @@ paths:
         name: profile
         required: true
         schema:
-          $ref: '#/definitions/user.UpdateProfileRequest'
+          $ref: '#/definitions/profile.UpdateProfileRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/user.User'
+            $ref: '#/definitions/profile.Profile'
         "400":
           description: Bad Request
           schema:
